Closed Bug 1721390 Opened 3 years ago Closed 3 years ago

aria-expanded on buttons and links with voiceover does not report expanded

Categories

(Core :: Disability Access APIs, defect, P1)

Firefox 90
Desktop
macOS
defect

Tracking

()

VERIFIED FIXED
92 Branch
Tracking Status
firefox92 --- verified

People

(Reporter: rasmussen.bryan, Assigned: morgan)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:90.0) Gecko/20100101 Firefox/90.0

Steps to reproduce:

I downloaded the latest version of FF, this was on Apple M1 with Big Sur.

I made a document with a button or a link with aria-expanded="true" attribute on it. It is not reported as being expanded, same problem if it is aria-expanded="false" it is not reported as being collapsed.

Actual results:

When I tab to the button or navigate to the button with Voiceover - VO-next arrow it reads that I am on a button but it does not tell me if it is expanded or collapsed.

Expected results:

Voiceover when reading the button with an aria-expanded true or false should read the exanded stated - expanded or collapsed.

The Bugbug bot thinks this bug should belong to the 'Core::Disability Access APIs' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Disability Access APIs
Product: Firefox → Core

Could you please provide a test case so we can be sure we're on the same page? Thanks.

Severity: -- → S2
Flags: needinfo?(rasmussen.bryan)
OS: Unspecified → macOS
Priority: -- → P1
Hardware: Unspecified → Desktop

Sure, here https://codepen.io/bryanrasmussen/pen/RwVxMKB which is adapted from https://www.w3.org/WAI/GL/wiki/Using_the_WAI-ARIA_aria-expanded_state_to_mark_expandable_and_collapsible_regions#Example_1:_Using_a_button_to_collapse_and_expand_a_region
however the following will also work
https://codepen.io/bryanrasmussen/pen/gOWoGJK

My understanding is that when you come to a button with aria-expanded = true the screenreader should announce expanded and when it is aria-expanded = false it should announce collapsed. In the case of VoiceOver with Firefox it says something like (for the second example)

  1. Test button, button
  2. You are currently on a button in a frame (because codepen) etc. etc.

there is no collapsed or expanded information added.

Flags: needinfo?(rasmussen.bryan)
Assignee: nobody → mreschenberg
Attachment #9233372 - Attachment description: WIP: Bug 1721390: Add moxExpanded to mozButtonAccessible r?eeejay → Bug 1721390: Add moxExpanded to mozButtonAccessible r?eeejay
Attachment #9233372 - Attachment description: Bug 1721390: Add moxExpanded to mozButtonAccessible r?eeejay → Bug 1721390: Add moxExpanded to mozAccessible r?eeejay
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6ef681a2887b
Add moxExpanded to mozAccessible r=eeejay
Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
Flags: qe-verify+

I have reproduced this issue using Firefox 92.0a1 (2021-07-20) on macOS 10.15 and macOS 12.
I can confirm this issue is fixed, I verified using Firefox 92.0b4 on macOS 10.15 and macOS 12.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: