Bug 1721390: Add moxExpanded to mozAccessible r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D121003